// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <TabHeader
    alm="github"
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={true}
    timeout={100}
  >
    <AlmPRDecorationTable
      additionalColumnsHeaders={
        Array [
          "settings.pr_decoration.table.column.github.url",
          "settings.pr_decoration.table.column.app_id",
        ]
      }
      alm="github"
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <TabHeader
    alm="github"
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AlmPRDecorationTable
      additionalColumnsHeaders={
        Array [
          "settings.pr_decoration.table.column.github.url",
          "settings.pr_decoration.table.column.app_id",
        ]
      }
      alm="github"
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</Fragment>
`;

exports[`should render correctly 3`] = `
<Fragment>
  <TabHeader
    alm="github"
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AlmPRDecorationTable
      additionalColumnsHeaders={
        Array [
          "settings.pr_decoration.table.column.github.url",
          "settings.pr_decoration.table.column.app_id",
        ]
      }
      alm="github"
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
  <AlmPRDecorationFormModal
    bindingDefinition={
      Object {
        "appId": "123456",
        "key": "key",
        "privateKey": "asdf1234",
        "url": "http://github.enterprise.com",
      }
    }
    onCancel={[MockFunction]}
    onSubmit={[MockFunction]}
  >
    <Component />
  </AlmPRDecorationFormModal>
</Fragment>
`;
